--- a/nicolas4d.org
+++ b/nicolas4d.org
@@ -1,17 +1,17 @@
-** 初始化所有的packages
+** 鍒濆鍖栨湁鐨刾ackages
 #+BEGIN_SRC emacs-lisp
 (package-initialize)
 #+END_SRC
 
-** 配置loadPath
+** 閰嶇疆loadPath
 #+BEGIN_SRC emacs-lisp 
 (add-to-list 'load-path "~/.emacs.d/lisp")
 ;; add more personal require
 (require 'init-packages)
 (require 'init-ui)
 (require 'init-better-defaults)
-(require 'init-keybinddings)
 (require 'init-org)
+(require 'init-keybinddings)
 
 (setq custom-file (expand-file-name "~/.emacs.d/lisp/custom.el" user-emacs-directory))
 (load-file custom-file)
